<resources>
    <string name="app_name">trabalho_layout</string>
    <string name="password">Password</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or Login With</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="todo">TODO</string>
</resources>